# Lego_Manual_Ingestion

./: .env.example  .gitignore  OPTION2_IMPLEMENTATION.md  README.md  VLM_PIPELINE_STAGES.md  pyproject.toml  requirements.txt  test_improved_extraction.py  test_timeout_issue.py  test_video_enhancer_v2.py  test_visualize_video_pipeline.py
backend/: main.py
cad_processing/: __init__.py  ldraw_parser.py  mesh_builder.py  point_cloud_generator.py
config/: manual_config.json  settings.py
docs/: available_gemini_models.json  available_gemini_models.md
frontend/: next.config.mjs  package-lock.json  package.json
ingestion/: __init__.py  image_cropper.py  manual_input_handler.py  pdf_processor.py  pipeline.py  schemas.py  url_handler.py  vlm_extractor.py
prompts/: step_extraction.txt  step_spatial.txt  video_action_description.txt  video_action_detection.txt  video_action_frame_analysis.txt  video_action_segmentation.txt  video_atomic_substeps.txt  video_conflict_resolution.txt  video_frame_quality.txt  video_part_detection.txt  video_pass1a_classification.txt  video_pass1b_quality_filter.txt  video_pass2a_action_analysis.txt  video_pass2b_sam3_comparison.txt  video_pass2c_reconciliation.txt  video_pass2d_step_completion.txt  video_placement_analysis.txt  video_placement_reconciliation.txt  video_placement_validation.txt  video_reconciliation.txt  video_spatial_extraction.txt  video_step_detection.txt
scripts/: build_brick_library.py  build_digital_twin.py  check_available_gemini_models.py  clear_ingestion.py  process_ldraw_files.py  view_digital_twin.py  (+1 more)
(+60 files in other folders)
