[project]
name = "lego-assembler"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "pillow==11.0.0",
    "pymupdf==1.24.14",
    "litellm>=1.54.6",
    "google-genai>=0.8.0",
    "loguru==0.7.3",
    "aiofiles==24.1.0",
    "python-dotenv==1.0.1",
    "opencv-python>=4.9.0",
    "requests>=2.32.0",
    "open3d>=0.19.0",
    "trimesh>=4.11.2",
    "numpy>=2.4.2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
